# script-langs

./: .gitignore  README.md  clean.sh  go.sh  mergefile.cpp  testconnect.c
docker/: README.md
docker/apache/: Dockerfile
docker/mongodb/: Dockerfile
docker/python/: Dockerfile
docker/redis/: Dockerfile
docker/ubuntu/: Dockerfile
dos/: checkfile_exist.cmd  clean.bat  dos.bat  rename.bat  stat2_dirsize.cmd  stat_filenum.cmd  test.cmd  testwin.cmd
go/: addr_parse.go  channel.go  goroutime.go
js/: phpAndJSCall.rar  twitter.htm
perl/: MyRndTest.pl  batchtest.pl  checkdisk.pl  delLineNum.pl  find_mostcpu_ps.pl  moncpu.pl  monmem.pl  printenv.pl  sendmail.pl  webget.pl
php/: common.php  curl.php  do_mysql.php  download.php  downloadImgs.php  mail.php  post.php  resize_image.php  searchdtest_http.php  testor_block.php
php/captcha/: REAME.txt  getImageRGB.php
php/emulate_login/: README  douban.php  qq.php  qqmail.php  weibo.php
php/soap/: client.php  server.php
php/socket_test/: searchdtest_http.php  testor_block.php
python/: .codecov.yml  MANIFEST.in  README.md  bakmysql.py  debug_demo.py  decorator.py  dict_combine.py  do_mssql.py  download_image.py  logging.conf  logtest.py  monitor_server.py  namespace.py  regex.py  setup.py  singleton.py  strconvert.py  super_test.py
python/cpython/: small_python.c
python/fetchServer/: fetch.py
python/helloworld/: app.yaml  helloworld.py
python/mylocation2011/: main.py
python/py-demo/: README.md  setup.cfg  setup.py
python/tasks_proj/: README.MD  setup.py
python/utils/: debug_demo.py  dict_combine.py  monitor_server.py  python_doc.py  regex.py  strconvert.py
python_gap/: bakmysql.py  debug_demo.py  do_mssql.py  download_image.py  logging.conf  logtest.py  monitor_server.py  mssql_delist_txdata.py  progress_down.py  regex.py
ruby/: monitor_sp.rb  rubyhttp.rb  stackprice.rb
rust/: main.rs  rust_thread.rs  rust_thread2.rs  second_mod.rs
shell/: bandmonitor.sh  clean.sh  convertFileCode.sh  convertFileFormat.sh  delspacelines.sh  diff_patch.sh  download.sh  gccversion.sh  get_cmd_src.sh  git-pull.sh  jump_dir.sh  logroll.sh  monitor_server.sh  ostype.sh  pingall.sh  process.sh  pyreverse.sh  regex.sh  rsync.sh  script_gather.sh  sendmail.sh  setip.sh  ssh.sh  start.sh  stat_codeline.sh  stat_tcpstate.sh  statlog.sh  stress_testor.sh  systeminfo.sh
toolkit/: apt_install.sh  editor_gather.sh
toolkit/make_generate/: CMakeLists.txt  CMakeLists_module.txt  Makefile2  Rules.make  makefile
vm/: README.md
(+189 files in other folders)
